# metis

./: .coderabbit.yaml  .gitignore  CASE_STUDY_IMPLEMENTATION.md  EXTRACTION_SUMMARY.md  LICENSE  README.md  conftest.py  contributing.md  pyproject.toml
config/: case_study.yaml
data/: arxiv-kaggle-latest.json
docs/: backup-strategy.md
docs/experiments/: Word2Vec_CF_Validation_Implementation.md  Word2Vec_Implementation_Progress.md
docs/prompts/: 3DSemanticLandscapeVisualization.md  ImplementationTask_Word2VecCFValid.md  prompt_Capsules_v_Transformers.md
docs/theory/: GeometricAlignmentFrameworkRevision.md  HumanCognitivePrinciplesandEM-LLMArchitecture_AnEvidence-BasedAssessment_proposal.md  TheConveyanceFramework_MathematicalToolsforMeasuringKnowledgeTransfer.md  touchstone.md
docs/theory/Benchmarking/: # HADES: Hardware evaluation and benchma.md  MemoryExperiment.md  ModelMemoriesConveyanceFactor.md  TheSingleNumberProblem.md
docs/theory/GEM_WithConveyance/: ConveyanceMeasurementandOptimizationinGEM.md  GEM-AGymforAgenticLLMs.md
examples/: basic_setup.py  custom_extractors.py  paper_ingestion.py
experiments/: __init__.py  base.py
experiments/arxiv_import/: SOCKET_PERMISSION_ISSUE.md  arxiv_parser.py  import_pipeline.py  import_pipeline_multigpu.py  train_gnn.py
experiments/arxiv_import/config/: arxiv_import.yaml
experiments/word2vec/: README.md  arxiv_fetcher.py  config.yaml  context_builder.py  embedding_generator.py  generate_embeddings.py  github_fetcher.py  process_all_papers.py  storage.py  test_context_builder.py  test_github_fetch.py  test_phase1.py  test_phase2.py
metis/: __init__.py
metis/chunking/: __init__.py
metis/config/: __init__.py  loader.py
metis/database/: __init__.py  admin.py  client.py  memory.py
metis/database/proxies/: DEPLOYMENT.md  Makefile  README.md  deploy-metis-proxies.sh  go.mod  metis-roproxy.service  metis-rwproxy.service  proxy_common.go  ro_proxy.go  rw_proxy.go
metis/embedders/: __init__.py  base.py  factory.py  jina_v4.py  jina_v4_transformers.py  sentence.py
metis/extractors/: __init__.py  base.py  code.py  docling.py  factory.py  latex.py  robust.py  treesitter.py
metis/gnn/: __init__.py  graph_builder.py  graphsage_model.py  inference.py  trainer.py
metis/utils/: __init__.py  hashing.py
notebooks/: case_study_analysis.ipynb
scripts/case_study/: 01_collect_citations.py  02_collect_github_repos.py  03_extract_papers.py  04_collect_boundary_objects.py  05_generate_embeddings.py  06_create_visualizations.py  DATA_SCHEMA.md  README.md  __init__.py  run_all.sh  utils.py
tests/: test_arxiv_parser.py
tests/case_study/: __init__.py  test_utils.py
tests/test_tools/: __init__.py  test_snapshot_manager.py
tools/: README.md  SNAPSHOT_QUICKSTART.md  __init__.py
tools/arxiv_import/: GPU_CONFIG.md  README.md  arxiv_parser.py  edge_builder.py  graph_pipeline.py  import_pipeline.py  import_pipeline_multigpu.py  train_gnn.py
tools/arxiv_import/config/: arxiv_import.yaml
tools/backup/: README.md  __init__.py  cli.py  snapshot_manager.py
